@@ -11,32 +11,15 @@
   <name>sql-tool</name>
   <description>Minimal JDBC SQL CLI</description>
 
-   <properties>
-     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-     <maven.compiler.release>17</maven.compiler.release>
-     <junit.version>5.10.2</junit.version>
-     <main.class>top.jiangqiang.tools.SqlTool</main.class>
-     <jpackage.name>sql-tool</jpackage.name>
-     <jpackage.app.version>1.0.0</jpackage.app.version>
-   </properties>
+  <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <maven.compiler.release>17</maven.compiler.release>
+      <main.class>top.jiangqiang.tools.SqlTool</main.class>
+      <jpackage.name>sql-tool</jpackage.name>
+      <jpackage.app.version>1.0.0</jpackage.app.version>
+    </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>cn.hutool</groupId>
-      <artifactId>hutool-db</artifactId>
-      <version>5.8.44</version>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>2.2.224</version>
-    </dependency>
   </dependencies>
 
   <build>
@@ -49,12 +32,7 @@
           <release>${maven.compiler.release}</release>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.5</version>
-      </plugin>
-      <plugin>
+       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.4.2</version>
@@ -66,91 +44,73 @@
           </archive>
         </configuration>
       </plugin>
-       <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-shade-plugin</artifactId>
-         <version>3.5.3</version>
-         <executions>
-           <execution>
-             <phase>package</phase>
-             <goals>
-               <goal>shade</goal>
-             </goals>
-              <configuration>
-                <createDependencyReducedPom>false</createDependencyReducedPom>
-                <shadedArtifactAttached>false</shadedArtifactAttached>
-                 <filters>
-                   <filter>
-                     <artifact>*:*</artifact>
-                     <excludes>
-                       <exclude>module-info.class</exclude>
-                       <exclude>META-INF/MANIFEST.MF</exclude>
-                     </excludes>
-                   </filter>
-                 </filters>
-                <transformers>
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>${main.class}</mainClass>
-                  </transformer>
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                </transformers>
-              </configuration>
-           </execution>
-         </executions>
-       </plugin>
-          <plugin>
-           <groupId>org.apache.maven.plugins</groupId>
-           <artifactId>maven-antrun-plugin</artifactId>
-           <version>1.8</version>
-           <executions>
-             <execution>
-               <id>prepare-jpackage-input</id>
-               <phase>prepare-package</phase>
-               <goals>
-                 <goal>run</goal>
-               </goals>
-               <configuration>
-                 <target>
-                   <mkdir dir="${project.build.directory}/jpackage-input"/>
-                 </target>
-               </configuration>
-             </execution>
-             <execution>
-               <id>copy-shaded-jar</id>
-               <phase>package</phase>
-               <goals>
-                 <goal>run</goal>
-               </goals>
-               <configuration>
-                 <target>
-                   <copy file="${project.build.directory}/${project.build.finalName}.jar" tofile="${project.build.directory}/jpackage-input/${project.build.finalName}.jar"/>
-                 </target>
-               </configuration>
-             </execution>
-           </executions>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.8</version>
+            <executions>
+              <execution>
+                <id>prepare-jpackage-input</id>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <mkdir dir="${project.build.directory}/jpackage-input"/>
+                  </target>
+                </configuration>
+              </execution>
+              <execution>
+                <id>copy-jar</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <copy file="${project.build.directory}/${project.build.finalName}.jar" tofile="${project.build.directory}/jpackage-input/${project.build.finalName}.jar"/>
+                  </target>
+                </configuration>
+              </execution>
+              <execution>
+                <id>create-custom-runtime</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <delete dir="${project.build.directory}/custom-runtime" quiet="true"/>
+                    <exec executable="jlink" dir="${project.basedir}" failonerror="true">
+                      <arg line="--add-modules java.base,java.sql,java.naming,java.logging"/>
+                      <arg line="--strip-debug"/>
+                      <arg line="--compress=2"/>
+                      <arg line="--no-header-files"/>
+                      <arg line="--no-man-pages"/>
+                      <arg line="--output ${project.build.directory}/custom-runtime"/>
+                    </exec>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
+           </plugin>
+            <plugin>
+            <groupId>org.panteleyev</groupId>
+            <artifactId>jpackage-maven-plugin</artifactId>
+            <version>1.7.4</version>
+            <configuration>
+              <name>${jpackage.name}</name>
+              <appVersion>${jpackage.app.version}</appVersion>
+              <type>APP_IMAGE</type>
+              <input>${project.build.directory}/jpackage-input</input>
+              <mainClass>${main.class}</mainClass>
+              <mainJar>${project.build.finalName}.jar</mainJar>
+              <runtimeImage>${project.build.directory}/custom-runtime</runtimeImage>
+              <winConsole>true</winConsole>
+              <destination>${project.build.directory}/jpackage-output</destination>
+            </configuration>
           </plugin>
-           <plugin>
-           <groupId>org.panteleyev</groupId>
-           <artifactId>jpackage-maven-plugin</artifactId>
-           <version>1.7.4</version>
-           <configuration>
-             <name>${jpackage.name}</name>
-             <appVersion>${jpackage.app.version}</appVersion>
-             <type>APP_IMAGE</type>
-             <input>${project.build.directory}/jpackage-input</input>
-             <mainClass>${main.class}</mainClass>
-             <mainJar>${project.build.finalName}.jar</mainJar>
-              <addModules>
-                <addModule>java.base</addModule>
-                <addModule>java.sql</addModule>
-                <addModule>java.naming</addModule>
-                <addModule>java.logging</addModule>
-                <addModule>java.management</addModule>
-              </addModules>
-             <winConsole>true</winConsole>
-             <destination>${project.build.directory}/jpackage-output</destination>
-           </configuration>
-         </plugin>
      </plugins>
    </build>
 </project>
